--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <artifactId>vaadin-dependencies</artifactId>
   <packaging>pom</packaging>
 
-  <version>1.0.2</version>
+  <version>1.0.3-SNAPSHOT</version>
 
   <inceptionYear>2019</inceptionYear>
   <organization>
