--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <artifactId>vaadin-dependencies</artifactId>
   <packaging>pom</packaging>
 
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
 
   <inceptionYear>2019</inceptionYear>
   <organization>
@@ -121,10 +121,10 @@
     <vaadin-v10.version>10.0.16</vaadin-v10.version>
     <vaadin-testbench-v10.version>6.2.0</vaadin-testbench-v10.version>
 
-    <vaadin-v14.version>14.0.0.rc7</vaadin-v14.version>
+    <vaadin-v14.version>14.0.0.rc9</vaadin-v14.version>
     <vaadin-testbench-v14.version>6.2.0</vaadin-testbench-v14.version>
 
-    <vaadin-vXX.version>14.0.0.rc7</vaadin-vXX.version>
+    <vaadin-vXX.version>14.0.0.rc9</vaadin-vXX.version>
     <vaadin-testbench-vXX.version>6.2.0</vaadin-testbench-vXX.version>
 
     <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
