--- a/vaadin-vXX/pom.xml
+++ b/vaadin-vXX/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>vaadin-dependencies</artifactId>
     <groupId>org.vaadin</groupId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
