--- a/nano-jetty/pom.xml
+++ b/nano-jetty/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>vaadin-dependencies</artifactId>
     <groupId>org.vaadin</groupId>
-    <version>1.0.4</version>
+    <version>0.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
