--- a/nano-jetty/pom.xml
+++ b/nano-jetty/pom.xml
@@ -15,9 +15,9 @@
     <jetty.version>9.4.19.v20190610</jetty.version>
 
     <!-- APM with stagemonitor -->
-    <stagemonitor.version>0.88.9</stagemonitor.version>
-    <opentracing-api.version>0.31.0</opentracing-api.version>
-    <byte-buddy.version>1.8.11</byte-buddy.version>
+<!--    <stagemonitor.version>0.88.9</stagemonitor.version>-->
+<!--    <opentracing-api.version>0.31.0</opentracing-api.version>-->
+<!--    <byte-buddy.version>1.8.11</byte-buddy.version>-->
 
   </properties>
 
