--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.vaadin</groupId>
+  <groupId>org.vaadin-tutorials</groupId>
   <artifactId>vaadin-dependencies</artifactId>
   <packaging>pom</packaging>
 
@@ -113,20 +113,20 @@
     <opentracing-api.version>0.33.0</opentracing-api.version>
     <asm.version>7.1</asm.version>
 
-    <testcontainers.version>1.12.0</testcontainers.version>
+    <testcontainers.version>1.12.1</testcontainers.version>
 
 
-    <vaadin-v08.version>8.8.5</vaadin-v08.version>
+    <vaadin-v08.version>8.8.6</vaadin-v08.version>
     <vaadin-testbench-v08.version>5.2.0</vaadin-testbench-v08.version>
 
 
-    <vaadin-v10.version>10.0.16</vaadin-v10.version>
+    <vaadin-v10.version>10.0.17</vaadin-v10.version>
     <vaadin-testbench-v10.version>6.2.0</vaadin-testbench-v10.version>
 
-    <vaadin-v14.version>14.0.2</vaadin-v14.version>
+    <vaadin-v14.version>14.0.8</vaadin-v14.version>
     <vaadin-testbench-v14.version>6.2.0</vaadin-testbench-v14.version>
 
-    <vaadin-vXX.version>14.0.2</vaadin-vXX.version>
+    <vaadin-vXX.version>15.0.0.alpha1</vaadin-vXX.version>
     <vaadin-testbench-vXX.version>6.2.0</vaadin-testbench-vXX.version>
 
     <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
@@ -135,20 +135,32 @@
     <!-- APM with stagemonitor -->
     <stagemonitor.version>0.89.0</stagemonitor.version>
     <opentracing-api.version>0.33.0</opentracing-api.version>
-    <byte-buddy.version>1.10.0</byte-buddy.version>
+    <byte-buddy.version>1.10.1</byte-buddy.version>
 
   </properties>
-  <repositories>
+
+
+  <distributionManagement>
     <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
+      <id>bintray-vaadin-tutorials-maven</id>
+      <name>vaadin-tutorials-maven</name>
+      <url>https://api.bintray.com/maven/vaadin-tutorials/maven/vaadin-dependencies/;publish=1</url>
+    </repository>
+  </distributionManagement>
+
+  <repositories>
+
+    <!--Bintray-->
+    <repository>
+      <id>bintray-vaadin-tutorials-maven</id>
+      <name>bintray</name>
+      <url>https://dl.bintray.com/vaadin-tutorials/maven</url>
+      <snapshots><enabled>false</enabled></snapshots>
     </repository>
     <repository>
       <id>central</id>
       <url>https://repo1.maven.org/maven2/</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
+      <snapshots><enabled>false</enabled></snapshots>
     </repository>
     <!-- Repository used by many Vaadin add-ons -->
     <repository>
@@ -159,27 +171,27 @@
     <repository>
       <id>Vaadin - Prereleases</id>
       <url>https://maven.vaadin.com/vaadin-prereleases</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
+      <snapshots><enabled>false</enabled></snapshots>
     </repository>
   </repositories>
 
   <pluginRepositories>
     <pluginRepository>
+      <name>bintray-plugins</name>
+      <id>bintray-vaadin-tutorials-maven</id>
+      <url>https://dl.bintray.com/vaadin-tutorials/maven</url>
+      <snapshots><enabled>false</enabled></snapshots>
+    </pluginRepository>
+    <pluginRepository>
       <id>central</id>
       <url>https://repo1.maven.org/maven2/</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
+      <snapshots><enabled>false</enabled></snapshots>
     </pluginRepository>
     <!-- Repository needed for prerelease versions of Vaadin -->
     <pluginRepository>
       <id>Vaadin - Prereleases</id>
       <url>https://maven.vaadin.com/vaadin-prereleases</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
+      <snapshots><enabled>false</enabled></snapshots>
     </pluginRepository>
   </pluginRepositories>
 
@@ -187,23 +199,22 @@
     <!--project versions-->
     <dependencies>
 
-<!--      Project modules-->
+      <!--      Project modules-->
       <dependency>
-        <groupId>org.vaadin</groupId>
+        <groupId>org.vaadin-tutorials</groupId>
         <artifactId>vaadin-dependencies-core</artifactId>
         <version>0.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-        <groupId>org.vaadin</groupId>
+        <groupId>org.vaadin-tutorials</groupId>
         <artifactId>vaadin-dependencies-nano-jetty</artifactId>
         <version>0.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-        <groupId>org.vaadin</groupId>
+        <groupId>org.vaadin-tutorials</groupId>
         <artifactId>vaadin-dependencies-nano-jetty-junit5</artifactId>
         <version>0.0.0-SNAPSHOT</version>
       </dependency>
-
 
 
       <!--API´s-->
@@ -236,19 +247,19 @@
       <dependency>
         <groupId>org.rapidpm</groupId>
         <artifactId>rapidpm-functional-reactive</artifactId>
-        <version>01.00.03-RPM</version>
+        <version>01.00.04-RPM</version>
       </dependency>
 
       <dependency>
         <groupId>org.rapidpm</groupId>
         <artifactId>rapidpm-logger-adapter</artifactId>
-        <version>01.00.03-RPM</version>
+        <version>01.00.04-RPM</version>
       </dependency>
 
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-        <version>2.8.5</version>
+        <version>2.8.6</version>
         <optional>true</optional>
         <!-- case: when no json de/serialization -->
       </dependency>
@@ -439,7 +450,7 @@
       <dependency>
         <groupId>com.github.javafaker</groupId>
         <artifactId>javafaker</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <scope>test</scope>
       </dependency>
 
@@ -610,7 +621,7 @@
       <artifactId>jcip-annotations</artifactId>
     </dependency>
 
-<!--    Testbench Testing inside Docker-->
+    <!--    Testbench Testing inside Docker-->
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
@@ -802,7 +813,7 @@
           <artifactId>frontend-maven-plugin</artifactId>
           <!-- Use the latest released version:
           https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/ -->
-          <version>1.7.6</version>
+          <version>1.8.0</version>
         </plugin>
 
 
@@ -990,8 +1001,8 @@
             <configuration>
               <header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
               <properties>
-                <owner>Sven Ruppert</owner>
-                <email>sven.ruppert@gmail.com</email>
+                <owner>Vaadin - Marketing Team - Developer Relations</owner>
+                <email>devrel@vaadin.com</email>
               </properties>
               <excludes>
                 <excludes>**/node/**</excludes>
