--- a/vaadin-v08/pom.xml
+++ b/vaadin-v08/pom.xml
@@ -21,7 +21,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>vaadin-dependencies</artifactId>
-    <groupId>org.vaadin</groupId>
+    <groupId>org.vaadin-tutorials</groupId>
     <version>0.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -81,7 +81,7 @@
       </dependency>
 
       <dependency>
-        <groupId>org.vaadin</groupId>
+        <groupId>org.vaadin-tutorials</groupId>
         <artifactId>addon-test-helpers</artifactId>
         <version>2.1</version>
         <scope>test</scope>
