--- a/vaadin-v14/pom.xml
+++ b/vaadin-v14/pom.xml
@@ -103,38 +103,41 @@
   </dependencyManagement>
 
   <dependencies>
-    <!--Vaadin -->
+    <dependency>
+      <groupId>org.rapidpm.vaadin</groupId>
+      <artifactId>nano-vaadin-undertow</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.vaadin-tutorials</groupId>
+      <artifactId>vaadin-dependencies-core</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>com.vaadin</groupId>
-      <!-- Replace artifactId with vaadin-core to use only free components -->
-      <artifactId>vaadin</artifactId>
-      <exclusions>
-        <!-- Webjars are only needed when running in Vaadin 13 compatibility mode -->
-        <exclusion>
-          <groupId>com.vaadin.webjar</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.webjars.bowergithub.insites</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.webjars.bowergithub.polymer</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.webjars.bowergithub.polymerelements</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.webjars.bowergithub.vaadin</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.webjars.bowergithub.webcomponents</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-      </exclusions>
+      <artifactId>flow-server</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.vaadin</groupId>
+      <artifactId>flow-push</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.vaadin</groupId>
+      <artifactId>flow-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.vaadin</groupId>
+      <artifactId>flow-html-components</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.vaadin</groupId>
+      <artifactId>flow-data</artifactId>
+    </dependency>
+
+<!--    TDD-->
+    <dependency>
+      <groupId>org.vaadin-tutorials</groupId>
+      <artifactId>vaadin-dependencies-nano-undertow-junit5</artifactId>
     </dependency>
 
     <dependency>
@@ -159,6 +162,7 @@
         <version>${vaadin-v14.version}</version>
         <executions>
           <execution>
+            <phase>test-compile</phase>
             <goals>
               <goal>prepare-frontend</goal>
               <goal>build-frontend</goal>
