--- a/nano-undertow-junit5/pom.xml
+++ b/nano-undertow-junit5/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>vaadin-dependencies</artifactId>
-    <groupId>org.vaadin-tutorials</groupId>
+    <groupId>org.vaadintutorials</groupId>
     <version>0.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.vaadin-tutorials</groupId>
+      <groupId>org.vaadintutorials</groupId>
       <artifactId>vaadin-dependencies-core</artifactId>
       <scope>compile</scope>
 
