--- a/vaadin-v10/pom.xml
+++ b/vaadin-v10/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>vaadin-dependencies</artifactId>
     <groupId>org.vaadintutorials</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>vaadin-dependencies-v10</artifactId>
